--- a/index.html
+++ b/index.html
@@ -1,7 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-
+    <!DOCTYPE html>
+    <html lang="pt-br">
+    <head>
+    <meta charset="UTF-8">
+    «title> Retrô-Onda</title>
+    <link rel="stylesheet"href="style.css">
+    <head>
+    <body class="bg">
+    <h1>Retrô-Onda: Jogos de ontem. Diversão de hoje.</h1> <h2> Página do Curso de Formação de Pensamento Computacional - Turma N</h2> <h3> Proposição de site de jogos retrôs - Consoles e Arcades</h3>
+    <p> Essa página está sendo elaborada com o intuito de servir de treinamento na criação de página
+    na linguagem
+    HTML. </p>
+    <p><strong><ahref="https://www.emulatorgames.net/roms/mame/"title="Arcade">Arcade</a>
+    - <a href="https://pt.wikipedia.org/wiki/Lista de consoles de jogos eletr%C3%B4nicos"
+    title="Consoles">Consoles</> - <a href="https://www.myabandonware.com/"
+    fitle="Abandonware">Abandonwaregames</a></strong></p>
+    <h4> Nossas prioridades: </h4>
+    <center>
+    <div class="row">
+    <div class="coluna">
+    <a href= "https://www.emulatorgames.net/">
+    <img src="emuladores.ipg" alt="emuladores" title= "Emuladores" stvle="width:80%">
+    </a>
+    </div>
+    <div class="coluna">
+    <a href="https://www.emulatorgames.net/roms/sega-genesis/"
+    <img src="segammini01.png" alt="Mega Drive Mini" title-"Mega Drive Mini"
+    style="width:80%">
+    </a>
+    </div>
+    <div class="coluna">
+    <a href="https://www.emulatorgames.net/roms/super-nintendo/"
+    <img src= "snesmini.bmp" alt="Snes Mini" title= "'Snes Mini" style="width:80%">
+    </a>
+    </div>
+    </div>
+    < center>
+    <p id="importante"> IMPORTANTE: Este site é apenas um exercício de aprendizado em
+        HTML+CSS e não tem o objetivo de estimular a utilização indevida de roms de jogos que possuem seus devidos direitos autorais. Logos e marcas aqui apresentadas são de propriedade exclusiva das empresas e de seus respectivos representantes legais.</p>
+        <div class="box"'>
+        <a href="https://github.com/">
+        <img src= "GitHub-Mark.png" alt="GitHub" title="GitHub" style="width:50%"></a>
+        </div>
+        <div class="box">
+        <a href="https://vscode.dev/">
+        <img src="Visual. png" alt= "Visual Studio Code" title="Visual Studio Code"
+        style="width:50%"></a>
+        </div>
+        <div>
+        <h5>Dicas</h5>
+        <ul>
+        <li>Manuais</li>
+        <li> Detonados</li>
+        <li>Revistas Clássicas</i>
+        <li>Curiosidades dos Games<Л>
+        </ul>
+        </body>
+        </html>
 
 
 
